kubernetes/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: server-health-monitor

spec:

  type: NodePort

  selector:
    app: server-health-monitor

  ports:

    - protocol: TCP

      port: 5000

      targetPort: 5000

      nodePort: 30080
