kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: server-health-monitor

spec:

  ingressClassName: nginx

  rules:

    - host: health.local

      http:

        paths:

          - path: /

            pathType: Prefix

            backend:

              service:

                name: server-health-monitor

                port:

                  number: 5000
